update swagger docs auth
