# src/app.js
@@ -25,12 +25,12 @@ const swaggerUi = require('swagger-ui-express');
 require('./config/passport');
 
 // Import Routes
-const webhookRoutes = require("./routes/webhook");
-const userRoutes = require("./routes/user");
-const eventRoutes = require("./routes/event");
-const ticketRoutes = require("./routes/ticket");
-const cartRoutes = require("./routes/cart");
-const favoritesRoutes = require("./routes/favorites");
+const webhookRoutes = require('./routes/webhook');
+const userRoutes = require('./routes/user');
+const eventRoutes = require('./routes/event');
+const ticketRoutes = require('./routes/ticket');
+const cartRoutes = require('./routes/cart');
+const favoritesRoutes = require('./routes/favorites');
 
 const app = express();
 
@@ -109,7 +109,7 @@ app.use(cookieParser());
 // app.use(passport.session());
 
 // Generate API documentation using swagger
-const swaggerFile = require('./swagger-output'); // Auto-generated API docs
+const swaggerFile = require('./swagger/swagger-output.json'); // Auto-generated API docs
 // Swagger docs UI route
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerFile));
 
@@ -121,12 +121,12 @@ app.get('/', (req, res) => {
 });
 
 // Routes
-app.use("/api/v1/", webhookRoutes);
-app.use("/api/v1/users", userRoutes);
-app.use("/api/v1/events", eventRoutes);
-app.use("/api/v1/tickets", ticketRoutes);
-app.use("/api/v1/carts", cartRoutes);
-app.use("/api/v1/favorites", favoritesRoutes);
+app.use('/api/v1/', webhookRoutes);
+app.use('/api/v1/users', userRoutes);
+app.use('/api/v1/events', eventRoutes);
+app.use('/api/v1/tickets', ticketRoutes);
+app.use('/api/v1/carts', cartRoutes);
+app.use('/api/v1/favorites', favoritesRoutes);
 
 // When user enters undefined route
 app.all('*', (req, res, next) => {
