# src/routes/cart.js
@@ -8,14 +8,12 @@ router.use(protectRoute);
 
 router.post(
   '/add/:eventId',
-  // #swagger.tags = ['Carts']
-  // #swagger.description = 'User adds event to cart'
+
   addToCart,
 );
 router.delete(
   '/remove/:eventId',
-  // #swagger.tags = ['Carts']
-  // #swagger.description = 'User removes event from cart'
+
   removeFromCart,
 );
 
