# src/routes/favorites.js
@@ -11,14 +11,11 @@ router.use(protectRoute);
 
 router.post(
   '/add/:eventId',
-  // #swagger.tags = ['Favourites']
-  // #swagger.description = 'User adds event to favourites'
   addToFavorites,
 );
 router.delete(
   '/remove/:eventId',
-  // #swagger.tags = ['Favourites']
-  // #swagger.description = 'User removes event from favourites'
+
   removeFromFavorites,
 );
 
