# src/routes/ticket.js
@@ -13,8 +13,7 @@ const router = express.Router();
 
 router.post(
   '/paystack-webhook',
-  // #swagger.tags = ['Webhooks']
-  // #swagger.description = 'Webhooks endpoint to listen for events from paystack'
+
   paystackWebhook,
 );
 
@@ -23,8 +22,7 @@ router.use(protectRoute);
 // Purchase and verify tickets
 router.post(
   '/purchase',
-  // #swagger.tags = ['Tickets']
-  // #swagger.description = 'User purchases ticket by initializing paystack payment gateway'
+
   purchaseTicket,
 );
 // router.get('/verify-payment', verifyPayment);
@@ -34,15 +32,13 @@ router.use(restrictTo('admin'));
 // Validate ticket
 router.post(
   '/validate',
-  // #swagger.tags = ['Tickets']
-  // #swagger.description = 'Admin validates tickets manually'
+
   validateTicket,
 );
 
 router.get(
   '/all-tickets',
-  // #swagger.tags = ['Tickets']
-  // #swagger.description = 'Get all tickets'
+
   getAllTickets,
 );
 
